--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
     <title>Oh my food!</title>
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    
+    <div class="block-page">
+        <header>
+            <div>
+                <h1>ohmyfood</h1>
+            </div>
+        </header>
+        <main>
+            <div class="localisation">
+                <form method="post" action="#" >
+                    <span><i class="fas fa-map-marker-alt"></i></span><input type="search" placeholder="Paris, Belleville">
+                </form>
+            </div>
+            <section class="call-to-action">
+                <h2>Réservez le menu qui vous convient</h2>
+                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+                <a href="#">
+                    <form method="post" action="#">
+                        <button class="btn">Explorer nos restaurants</button>
+                    </form>
+                </a>
+            </section>
+        </main>
+    </div>
 </body>
 </html>
