réalisation de la partie fonctionnement

--- a/public/index.html
+++ b/public/index.html
@@ -22,14 +22,31 @@
                     <span><i class="fas fa-map-marker-alt"></i></span><input type="search" placeholder="Paris, Belleville">
                 </form>
             </div>
+
             <section class="call-to-action">
                 <h2>Réservez le menu qui vous convient</h2>
                 <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-                <a href="#">
-                    <form method="post" action="#">
-                        <button class="btn">Explorer nos restaurants</button>
-                    </form>
-                </a>
+                <form method="post" action="#">
+                    <button class="btn">Explorer nos restaurants</button>
+                </form>
+            </section>
+                
+            <section class="fonctionnement-block">
+                <h2>Fonctionnement</h2>
+                <div>
+                    <div class="fonctionnement-block_restaurant">
+                        <span><i class="fas fa-mobile-alt"></i></span><p>Choisissez un restaurant</p>
+                    </div>
+                    <div class="fonctionnement-block_menu">
+                        <span><i class="fas fa-list-ul"></i></span><p>Composez votre menu</p>
+                    </div>
+                    <div class="fonctionnement-block_degustez">
+                        <span><i class="fas fa-store"></i></span><p>Dégustez au restaurant</p>
+                    </div>
+                </div>
+            </section>
+            <section>
+                
             </section>
         </main>
     </div>
