réalisation des cards

--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,24 @@
                     </div>
                 </div>
             </section>
-            <section>
-                
+            <section class="restaurants-block">
+                <h2>Restaurants</h2>
+                <div class="card-container">
+                    <a href="#" class="card">
+                        <div class="card__img">
+                            <img class="card__photo" src="./img/la-palette-du-goût.jpg" alt="photo la palette du goût">
+                            <span class="card__new">Nouveau</span>
+                        </div>
+                        <div class="card__content">
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                            <span><i class="far fa-heart"></i></span>
+                        </div>
+                    </a>
+                    <a href="#"></a>
+                    <a href="#"></a>
+                    <a href="#"></a>
+                </div>
             </section>
         </main>
     </div>
