--- a/index.html
+++ b/index.html
@@ -4,9 +4,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
     <title>Oh my food!</title>
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    
+    <div class="block-page">
+        <header>
+            <div>
+                <h1>ohmyfood</h1>
+            </div>
+        </header>
+        <main>
+            <div class="localisation">
+                <form method="post" action="#" >
+                    <span><i class="fas fa-map-marker-alt"></i></span><input type="search" placeholder="Paris, Belleville">
+                </form>
+            </div>
+
+            <section class="call-to-action">
+                <h2>Réservez le menu qui vous convient</h2>
+                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+                <form method="post" action="#">
+                    <button class="btn">Explorer nos restaurants</button>
+                </form>
+            </section>
+                
+            <section class="fonctionnement-block">
+                <h2>Fonctionnement</h2>
+                <div>
+                    <div class="fonctionnement-block_restaurant">
+                        <span><i class="fas fa-mobile-alt"></i></span><p>Choisissez un restaurant</p>
+                    </div>
+                    <div class="fonctionnement-block_menu">
+                        <span><i class="fas fa-list-ul"></i></span><p>Composez votre menu</p>
+                    </div>
+                    <div class="fonctionnement-block_degustez">
+                        <span><i class="fas fa-store"></i></span><p>Dégustez au restaurant</p>
+                    </div>
+                </div>
+            </section>
+            <section class="restaurants-block">
+                <h2>Restaurants</h2>
+                <div class="card-container">
+                    <a href="#" class="card">
+                        <div class="card__img">
+                            <img class="card__photo" src="./img/la-palette-du-goût.jpg" alt="photo la palette du goût">
+                            <span class="card__new">Nouveau</span>
+                        </div>
+                        <div class="card__content">
+                            <h3>La palette du goût</h3>
+                            <p>Ménilmontant</p>
+                            <span><i class="far fa-heart"></i></span>
+                        </div>
+                    </a>
+                    <a href="#"></a>
+                    <a href="#"></a>
+                    <a href="#"></a>
+                </div>
+            </section>
+        </main>
+    </div>
 </body>
 </html>
