--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Oh my food!</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
@@ -56,12 +56,41 @@
                         <div class="card__content">
                             <h3>La palette du goût</h3>
                             <p>Ménilmontant</p>
+                            <i class="far fa-heart"></i>
+                            <i class="fas fa-heart"></i>
+                        </div>
+                    </a>
+                    <a href="#" class="card">
+                        <div class="card__img">
+                            <img class="card__photo" src="./img/la-note-enchantée.jpg" alt="photo la note enchantée">
+                            <span class="card__new">Nouveau</span>
+                        </div>
+                        <div class="card__content">
+                            <h3>La note enchantée</h3>
+                            <p>Charonne</p>
                             <span><i class="far fa-heart"></i></span>
                         </div>
                     </a>
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
+                    <a href="#" class= card>
+                        <div class="card__img">
+                            <img class="card__photo" src="./img/à-la-française.jpg" alt="photo la palette du goût">
+                        </div>
+                        <div class="card__content">
+                            <h3>À la française</h3>
+                            <p>Cité Rouge</p>
+                            <span><i class="far fa-heart"></i></span>
+                        </div>
+                    </a>
+                    <a href="#" class="card">
+                        <div class="card__img">
+                            <img class="card__photo" src="./img/le-délice-des-sens.jpg" alt="photo la palette du goût">
+                        </div>
+                        <div class="card__content">
+                            <h3>Le délice des sens</h3>
+                            <p>Folie-Méricourt</p>
+                            <span><i class="far fa-heart"></i></span>
+                        </div>
+                    </a>
                 </div>
             </section>
         </main>
