réalisation du coeur et du hover

--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
                         <div class="card__content">
                             <h3>La palette du goût</h3>
                             <p>Ménilmontant</p>
-                            <i class="far fa-heart"></i>
-                            <i class="fas fa-heart"></i>
+                            <span>
+                                <i class="far fa-heart fa-stack-2x"></i>
+                                <i class="fas fa-heart fa-stack-1x fa-inverse"></i>
+                            </span>
                         </div>
                     </a>
                     <a href="#" class="card">
@@ -68,7 +70,10 @@
                         <div class="card__content">
                             <h3>La note enchantée</h3>
                             <p>Charonne</p>
-                            <span><i class="far fa-heart"></i></span>
+                            <span>
+                                <i class="far fa-heart fa-stack-2x"></i>
+                                <i class="fas fa-heart fa-stack-1x fa-inverse"></i>
+                            </span>
                         </div>
                     </a>
                     <a href="#" class= card>
@@ -78,7 +83,10 @@
                         <div class="card__content">
                             <h3>À la française</h3>
                             <p>Cité Rouge</p>
-                            <span><i class="far fa-heart"></i></span>
+                            <span>
+                                <i class="far fa-heart fa-stack-2x"></i>
+                                <i class="fas fa-heart fa-stack-1x fa-inverse"></i>
+                            </span>
                         </div>
                     </a>
                     <a href="#" class="card">
@@ -88,7 +96,10 @@
                         <div class="card__content">
                             <h3>Le délice des sens</h3>
                             <p>Folie-Méricourt</p>
-                            <span><i class="far fa-heart"></i></span>
+                            <span>
+                                <i class="far fa-heart fa-stack-2x"></i>
+                                <i class="fas fa-heart fa-stack-1x fa-inverse"></i>
+                            </span>
                         </div>
                     </a>
                 </div>
