réalisation du footer

--- a/index.html
+++ b/index.html
@@ -105,6 +105,17 @@
                 </div>
             </section>
         </main>
+        <footer>
+            <div>
+                <h3>ohmyfood</h3>
+            </div>
+            <div>
+                <p><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></p>
+                <p><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></p>
+                <p><a href="#">Mentions légales</a></p>
+                <p><a href="#">Contact</a></p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
