réalisation des menus

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Oh my food!</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/icon/favicon-16x16.png">
+    <link rel="manifest" href="./img/icon/site.webmanifest">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -48,7 +52,7 @@
             <section class="restaurants-block">
                 <h2>Restaurants</h2>
                 <div class="card-container">
-                    <a href="#" class="card">
+                    <a href="la-palette-du-goût.html" class="card">
                         <div class="card__img">
                             <img class="card__photo" src="./img/la-palette-du-goût.jpg" alt="photo la palette du goût">
                             <span class="card__new">Nouveau</span>
@@ -62,7 +66,7 @@
                             </span>
                         </div>
                     </a>
-                    <a href="#" class="card">
+                    <a href="la-note-enchantée.html" class="card">
                         <div class="card__img">
                             <img class="card__photo" src="./img/la-note-enchantée.jpg" alt="photo la note enchantée">
                             <span class="card__new">Nouveau</span>
@@ -76,7 +80,7 @@
                             </span>
                         </div>
                     </a>
-                    <a href="#" class= card>
+                    <a href="à_la_française.html" class= card>
                         <div class="card__img">
                             <img class="card__photo" src="./img/à-la-française.jpg" alt="photo la palette du goût">
                         </div>
@@ -89,7 +93,7 @@
                             </span>
                         </div>
                     </a>
-                    <a href="#" class="card">
+                    <a href="le-délice-des-sens.html" class="card">
                         <div class="card__img">
                             <img class="card__photo" src="./img/le-délice-des-sens.jpg" alt="photo la palette du goût">
                         </div>
