--- a/le-délice-des-sens.html
+++ b/le-délice-des-sens.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <div class="block-page">
+        <!-- Header -->
         <header>
             <div class="left-arrow">
                 <a href="index.html">
@@ -29,8 +30,8 @@
         </header>
 
         <img src="./img/le-délice-des-sens.jpg" alt="photo restaurant à la française">
-        
-        <main class="main-restaurant-française">
+        <!-- Nom du restaurant -->
+        <main class="main-restaurant">
             <div class="main-title">
                 <h2>Le délice des sens</h2>
                 <span class="heart-block">
@@ -38,102 +39,159 @@
                     <i class="fas fa-heart fa-stack-1x fa-inverse"></i>
                 </span>
             </div>
+        <!-- Entrées -->
             <section>
                 <h3><span class="h3-border">ENTR</span>ÉES</h3>
-                <div class="menu-meal">
-                    <div class="menu-meal_text">
-                        <h4>Tartare de thon</h4>
-                        <p>Assaisonné au yuzu</p>
+
+                <div class="menu-formula">
+                    <div class="menu-meal">
+                        <div class="menu-meal__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                        <div class="menu-meal__text">
+                            <div class="menu-meal__title">
+                                <h4>Tartare de thon</h4>
+                            </div>
+                            <div class="menu-meal__price">
+                                <p class="subheading">Assaisonné au yuzu</p>
+                                <p class="moving-price">25€</p>
+                            </div>
+                        </div>
                     </div>
-                    <div>
-                        <span class="menu-meal_price">25€</span>
+                    <div class="menu-meal">
+                        <div class="menu-meal__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                        <div class="menu-meal__text">
+                            <div class="menu-meal__title">
+                                <h4>Bouchée de homard croustillant</h4>
+                            </div>
+                            <div class="menu-meal__price">
+                                <p class="subheading">Et sa farandole de petits légumes</p>
+                                <p class="moving-price">35€</p>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="menu-meal">
-                    <div class="menu-meal_text">
-                        <h4>Bouchée de homard croustillant</h4>
-                        <p>Et sa farandole de petits légumes</p>
-                    </div>
-                    <div>
-                        <span class="menu-meal_price">35€</span>
-                    </div>
-                </div>
-                <div class="menu-meal">
-                    <div class="menu-meal_text">
-                        <h4>Velouté de cèpes</h4>
-                        <p>Aux truffes</p>
-                    </div>
-                    <div>
-                        <span class="menu-meal_price">20€</span>
+                    <div class="menu-meal">
+                        <div class="menu-meal__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                        <div class="menu-meal__text">
+                            <div class="menu-meal__title">
+                                <h4>Velouté de cèpes</h4>
+                            </div>
+                            <div class="menu-meal__price">
+                                <p class="subheading">Aux truffes</p>
+                                <p class="moving-price">20€</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
+        <!-- Plats -->
             <section>
                 <h3><span class="h3-border">PLAT</span>S</h3>
-                <div class="menu-meal">
-                    <div class="menu-meal_text">
-                        <h4>Poulet rôti aux herbes de provence</h4>
-                        <p>Et sa crème de truffe</p>
+                <div class="menu-formula">
+                    <div class="menu-meal">
+                        <div class="menu-meal__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                        <div class="menu-meal__text">
+                            <div class="menu-meal__title">
+                                <h4>Poulet rôti aux herbes de Provence</h4>
+                            </div>
+                            <div class="menu-meal__price">
+                                <p class="subheading">Et sa crème de truffe</p>
+                                <p class="moving-price">40€</p>
+                            </div>
+                        </div>
                     </div>
-                    <div>
-                        <span class="menu-meal_price">40€</span>
+                    <div class="menu-meal">
+                        <div class="menu-meal__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                        <div class="menu-meal__text">
+                            <div class="menu-meal__title">
+                                <h4>Langouste rôtie</h4>
+                            </div>
+                            <div class="menu-meal__price">
+                                <p class="subheading">Et ses légumes de saison</p>
+                                <p class="moving-price">35€</p>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="menu-meal">
-                    <div class="menu-meal_text">
-                        <h4>Langouste rôtie</h4>
-                        <p>Et ses légumes de saison</p>
-                    </div>
-                    <div>
-                        <span class="menu-meal_price">35€</span>
-                    </div>
-                </div>
-                <div class="menu-meal">
-                    <div class="menu-meal_text">
-                        <h4>Côte de boeuf angus</h4>
-                        <p>Et sa purée de panais</p>
-                    </div>
-                    <div>
-                        <span class="menu-meal_price">44€</span>
+                    <div class="menu-meal">
+                        <div class="menu-meal__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                        <div class="menu-meal__text">
+                            <div class="menu-meal__title">
+                                <h4>Côte de boeuf Angus</h4>
+                            </div>
+                            <div class="menu-meal__price">
+                                <p class="subheading">Et sa purée de panais</p>
+                                <p class="moving-price">44€</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
+        <!-- Desserts -->
             <section>
                 <h3><span class="h3-border">DESS</span>ERTS</h3>
-                <div class="menu-meal">
-                    <div class="menu-meal_text">
-                        <h4>Farandole de desserts</h4>
-                        <p>Du chef</p>
+                <div class="menu-formula">
+                    <div class="menu-meal">
+                        <div class="menu-meal__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                        <div class="menu-meal__text">
+                            <div class="menu-meal__title">
+                                <h4>Farandole de desserts</h4>
+                            </div>
+                            <div class="menu-meal__price">
+                                <p class="subheading">Du chef</p>
+                                <p class="moving-price">18€</p>
+                            </div>
+                        </div>
                     </div>
-                    <div>
-                        <span class="menu-meal_price">18€</span>
+                    <div class="menu-meal">
+                        <div class="menu-meal__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                        <div class="menu-meal__text">
+                            <div class="menu-meal__title">
+                                <h4>Crème brulée</h4>
+                            </div>
+                            <div class="menu-meal__price">
+                                <p class="subheading">Revisitée</p>
+                                <p class="moving-price">22€</p>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="menu-meal">
-                    <div class="menu-meal_text">
-                        <h4>Crème brulée</h4>
-                        <p>Revisitée</p>
-                    </div>
-                    <div>
-                        <span class="menu-meal_price">22€</span>
-                    </div>
-                </div>
-                <div class="menu-meal">
-                    <div class="menu-meal_text">
-                        <h4>Tiramisu</h4>
-                        <p>À la noisette</p>
-                    </div>
-                    <div>
-                        <span class="menu-meal_price">23€</span>
+                    <div class="menu-meal">
+                        <div class="menu-meal__check">
+                            <i class="fas fa-check-circle"></i>
+                        </div>
+                        <div class="menu-meal__text">
+                            <div class="menu-meal__title">
+                                <h4>Tiramisu</h4>
+                            </div>
+                            <div class="menu-meal__price">
+                                <p class="subheading">À la noisette</p>
+                                <p class="moving-price">23€</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
+        <!-- Bouton Commander -->
             <div class="btn-center">
                 <a href="#">
                     <button class="btn">Commander</button>
                 </a>
             </div>
         </main>
+        <!-- Footer -->
         <footer>
             <div>
                 <h3>ohmyfood</h3>
