réalisation du responsive design

--- a/la-note-enchantée.html
+++ b/la-note-enchantée.html
@@ -29,7 +29,9 @@
             </div>
         </header>
 
-        <img src="./img/la-note-enchantée.jpg" alt="photo restaurant la note enchantée">
+        <div>
+            <img src="./img/la-note-enchantée.jpg" alt="photo restaurant la note enchantée">
+        </div>
         <!-- Nom du restaurant -->
         <main class="main-restaurant">
             <div class="main-title">
@@ -214,9 +216,9 @@
         <!-- Footer -->
         <footer>
             <div>
-                <h3>ohmyfood</h3>
+                <h3 class="footer-logo">ohmyfood</h3>
             </div>
-            <div>
+            <div class="link-container">
                 <p><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></p>
                 <p><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></p>
                 <p><a href="#">Mentions légales</a></p>
