--- a/la-palette-du-goût.html
+++ b/la-palette-du-goût.html
@@ -29,7 +29,10 @@
             </div>
         </header>
 
-        <img src="./img/la-palette-du-goût.jpg" alt="photo restaurant la palette du goût">
+        <div>
+            <img src="./img/la-palette-du-goût.jpg" alt="photo restaurant la palette du goût">
+        </div>
+
         <!-- Nom du restaurant -->
         <main class="main-restaurant">
             <div class="main-title">
@@ -198,9 +201,9 @@
         <!-- Footer -->
         <footer>
             <div>
-                <h3>ohmyfood</h3>
+                <h3 class="footer-logo">ohmyfood</h3>
             </div>
-            <div>
+            <div class="link-container">
                 <p><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></p>
                 <p><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></p>
                 <p><a href="#">Mentions légales</a></p>
