--- a/le-délice-des-sens.html
+++ b/le-délice-des-sens.html
@@ -29,7 +29,9 @@
             </div>
         </header>
 
-        <img src="./img/le-délice-des-sens.jpg" alt="photo restaurant à la française">
+        <div>
+            <img src="./img/le-délice-des-sens.jpg" alt="photo restaurant à la française">
+        </div>
         <!-- Nom du restaurant -->
         <main class="main-restaurant">
             <div class="main-title">
@@ -193,10 +195,10 @@
         </main>
         <!-- Footer -->
         <footer>
-            <div>
+            <div class="footer-logo">
                 <h3>ohmyfood</h3>
             </div>
-            <div>
+            <div class="link-container">
                 <p><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></p>
                 <p><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></p>
                 <p><a href="#">Mentions légales</a></p>
