--- a/à_la_française.html
+++ b/à_la_française.html
@@ -29,7 +29,9 @@
             </div>
         </header>
 
-        <img src="./img/à-la-française.jpg" alt="photo restaurant à la française">
+        <div>
+            <img src="./img/à-la-française.jpg" alt="photo restaurant à la française">
+        </div>
         
         <main class="main-restaurant">
         <!-- Nom du restaurant -->
@@ -200,9 +202,9 @@
         <!-- Footer -->
         <footer>
             <div>
-                <h3>ohmyfood</h3>
+                <h3 class="footer-logo">ohmyfood</h3>
             </div>
-            <div>
+            <div class="link-container">
                 <p><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></p>
                 <p><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></p>
                 <p><a href="#">Mentions légales</a></p>
