--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
                     
                 <section class="fonctionnement-block">
                     <h2>Fonctionnement</h2>
-                    <div>
-                        <div class="fonctionnement-block_restaurant">
+                    <div class="fonctionnement-steps">
+                        <div class="fonctionnement-steps__restaurant">
                             <span><i class="fas fa-mobile-alt"></i></span><p>Choisissez un restaurant</p>
                         </div>
-                        <div class="fonctionnement-block_menu">
+                        <div class="fonctionnement-steps__menu">
                             <span><i class="fas fa-list-ul"></i></span><p>Composez votre menu</p>
                         </div>
-                        <div class="fonctionnement-block_degustez">
+                        <div class="fonctionnement-steps__dégustez">
                             <span><i class="fas fa-store"></i></span><p>Dégustez au restaurant</p>
                         </div>
                     </div>
@@ -119,9 +119,9 @@
             </main>
             <footer>
                 <div>
-                    <h3>ohmyfood</h3>
+                    <h3 class="footer-logo">ohmyfood</h3>
                 </div>
-                <div>
+                <div class="link-container">
                     <p><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></p>
                     <p><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></p>
                     <p><a href="#">Mentions légales</a></p>
