correction du loading spinner, avancement sur le responsive

--- a/le-délice-des-sens.html
+++ b/le-délice-des-sens.html
@@ -20,6 +20,7 @@
             <div class="left-arrow">
                 <a href="index.html">
                     <i class="fas fa-arrow-left"></i>
+                    <span class="index-link">Retour à l'accueil</span>
                 </a>
             </div>
             <div>
@@ -29,7 +30,7 @@
             </div>
         </header>
 
-        <div>
+        <div class="img-restaurant">
             <img src="./img/le-délice-des-sens.jpg" alt="photo restaurant à la française">
         </div>
         <!-- Nom du restaurant -->
@@ -42,150 +43,151 @@
                 </span>
             </div>
         <!-- Entrées -->
-            <section>
-                <h3><span class="h3-border">ENTR</span>ÉES</h3>
-
-                <div class="menu-formula">
-                    <div class="menu-meal">
-                        <div class="menu-meal__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu-meal__text">
-                            <div class="menu-meal__title">
-                                <h4>Tartare de thon</h4>
+            <div class="formula-container">
+                <section>
+                    <h3><span class="h3-border">ENTR</span>ÉES</h3>
+                    <div class="menu-formula">
+                        <div class="menu-meal">
+                            <div class="menu-meal__check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
-                            <div class="menu-meal__price">
-                                <p class="subheading">Assaisonné au yuzu</p>
-                                <p class="moving-price">25€</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="menu-meal">
-                        <div class="menu-meal__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu-meal__text">
-                            <div class="menu-meal__title">
-                                <h4>Bouchée de homard croustillant</h4>
-                            </div>
-                            <div class="menu-meal__price">
-                                <p class="subheading">Et sa farandole de petits légumes</p>
-                                <p class="moving-price">35€</p>
+                            <div class="menu-meal__text">
+                                <div class="menu-meal__title">
+                                    <h4>Tartare de thon</h4>
+                                </div>
+                                <div class="menu-meal__price">
+                                    <p class="subheading">Assaisonné au yuzu</p>
+                                    <p class="moving-price">25€</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="menu-meal">
-                        <div class="menu-meal__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu-meal__text">
-                            <div class="menu-meal__title">
-                                <h4>Velouté de cèpes</h4>
+                        <div class="menu-meal">
+                            <div class="menu-meal__check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
-                            <div class="menu-meal__price">
-                                <p class="subheading">Aux truffes</p>
-                                <p class="moving-price">20€</p>
+                            <div class="menu-meal__text">
+                                <div class="menu-meal__title">
+                                    <h4>Bouchée de homard croustillant</h4>
+                                </div>
+                                <div class="menu-meal__price">
+                                    <p class="subheading">Et sa farandole de petits légumes</p>
+                                    <p class="moving-price">35€</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </section>
-        <!-- Plats -->
-            <section>
-                <h3><span class="h3-border">PLAT</span>S</h3>
-                <div class="menu-formula">
-                    <div class="menu-meal">
-                        <div class="menu-meal__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu-meal__text">
-                            <div class="menu-meal__title">
-                                <h4>Poulet rôti aux herbes de Provence</h4>
+                        <div class="menu-meal">
+                            <div class="menu-meal__check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
-                            <div class="menu-meal__price">
-                                <p class="subheading">Et sa crème de truffe</p>
-                                <p class="moving-price">40€</p>
+                            <div class="menu-meal__text">
+                                <div class="menu-meal__title">
+                                    <h4>Velouté de cèpes</h4>
+                                </div>
+                                <div class="menu-meal__price">
+                                    <p class="subheading">Aux truffes</p>
+                                    <p class="moving-price">20€</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="menu-meal">
-                        <div class="menu-meal__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu-meal__text">
-                            <div class="menu-meal__title">
-                                <h4>Langouste rôtie</h4>
+                </section>
+                        <!-- Plats -->
+                <section>
+                    <h3><span class="h3-border">PLAT</span>S</h3>
+                    <div class="menu-formula">
+                        <div class="menu-meal">
+                            <div class="menu-meal__check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
-                            <div class="menu-meal__price">
-                                <p class="subheading">Et ses légumes de saison</p>
-                                <p class="moving-price">35€</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="menu-meal">
-                        <div class="menu-meal__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu-meal__text">
-                            <div class="menu-meal__title">
-                                <h4>Côte de boeuf Angus</h4>
-                            </div>
-                            <div class="menu-meal__price">
-                                <p class="subheading">Et sa purée de panais</p>
-                                <p class="moving-price">44€</p>
+                            <div class="menu-meal__text">
+                                <div class="menu-meal__title">
+                                    <h4>Poulet rôti aux herbes de Provence</h4>
+                                </div>
+                                <div class="menu-meal__price">
+                                    <p class="subheading">Et sa crème de truffe</p>
+                                    <p class="moving-price">40€</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </section>
-        <!-- Desserts -->
-            <section>
-                <h3><span class="h3-border">DESS</span>ERTS</h3>
-                <div class="menu-formula">
-                    <div class="menu-meal">
-                        <div class="menu-meal__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu-meal__text">
-                            <div class="menu-meal__title">
-                                <h4>Farandole de desserts</h4>
+                        <div class="menu-meal">
+                            <div class="menu-meal__check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
-                            <div class="menu-meal__price">
-                                <p class="subheading">Du chef</p>
-                                <p class="moving-price">18€</p>
+                            <div class="menu-meal__text">
+                                <div class="menu-meal__title">
+                                    <h4>Langouste rôtie</h4>
+                                </div>
+                                <div class="menu-meal__price">
+                                    <p class="subheading">Et ses légumes de saison</p>
+                                    <p class="moving-price">35€</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="menu-meal">
-                        <div class="menu-meal__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu-meal__text">
-                            <div class="menu-meal__title">
-                                <h4>Crème brulée</h4>
+                        <div class="menu-meal">
+                            <div class="menu-meal__check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
-                            <div class="menu-meal__price">
-                                <p class="subheading">Revisitée</p>
-                                <p class="moving-price">22€</p>
+                            <div class="menu-meal__text">
+                                <div class="menu-meal__title">
+                                    <h4>Côte de boeuf Angus</h4>
+                                </div>
+                                <div class="menu-meal__price">
+                                    <p class="subheading">Et sa purée de panais</p>
+                                    <p class="moving-price">44€</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="menu-meal">
-                        <div class="menu-meal__check">
-                            <i class="fas fa-check-circle"></i>
-                        </div>
-                        <div class="menu-meal__text">
-                            <div class="menu-meal__title">
-                                <h4>Tiramisu</h4>
+                </section>
+                        <!-- Desserts -->
+                <section>
+                    <h3><span class="h3-border">DESS</span>ERTS</h3>
+                    <div class="menu-formula">
+                        <div class="menu-meal">
+                            <div class="menu-meal__check">
+                                <i class="fas fa-check-circle"></i>
                             </div>
-                            <div class="menu-meal__price">
-                                <p class="subheading">À la noisette</p>
-                                <p class="moving-price">23€</p>
+                            <div class="menu-meal__text">
+                                <div class="menu-meal__title">
+                                    <h4>Farandole de desserts</h4>
+                                </div>
+                                <div class="menu-meal__price">
+                                    <p class="subheading">Du chef</p>
+                                    <p class="moving-price">18€</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="menu-meal">
+                            <div class="menu-meal__check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                            <div class="menu-meal__text">
+                                <div class="menu-meal__title">
+                                    <h4>Crème brulée</h4>
+                                </div>
+                                <div class="menu-meal__price">
+                                    <p class="subheading">Revisitée</p>
+                                    <p class="moving-price">22€</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="menu-meal">
+                            <div class="menu-meal__check">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                            <div class="menu-meal__text">
+                                <div class="menu-meal__title">
+                                    <h4>Tiramisu</h4>
+                                </div>
+                                <div class="menu-meal__price">
+                                    <p class="subheading">À la noisette</p>
+                                    <p class="moving-price">23€</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </section>
+                </section>
+            </div>
         <!-- Bouton Commander -->
             <div class="btn-center">
                 <a href="#">
