correction du footer + header en largeur de 100%

--- a/à_la_française.html
+++ b/à_la_française.html
@@ -14,27 +14,27 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <div class="block-page">
-        <!-- Header -->
-        <header>
-            <div class="left-arrow">
-                <a href="index.html">
-                    <i class="fas fa-arrow-left"></i>
-                    <span class="index-link">Retour à l'accueil</span>
-                </a>
-            </div>
-            <div>
-                <a href="index.html">
-                    <h1>ohmyfood</h1>
-                </a>
-            </div>
-        </header>
-
-        <div class="img-restaurant">
-            <img src="./img/à-la-française.jpg" alt="photo restaurant à la française">
+    <!-- Header -->
+    <header>
+        <div class="left-arrow">
+            <a href="index.html">
+                <i class="fas fa-arrow-left"></i>
+                <span class="index-link">Retour à l'accueil</span>
+            </a>
         </div>
-        
-        <main class="main-restaurant">
+        <div>
+            <a href="index.html">
+                <h1>ohmyfood</h1>
+            </a>
+        </div>
+    </header>
+
+    <div class="img-restaurant">
+        <img src="./img/à-la-française.jpg" alt="photo restaurant à la française">
+    </div>
+    
+    <main class="main-restaurant">
+    <div class="menu-main-content">
         <!-- Nom du restaurant -->
             <div class="main-title">
                 <h2>À la française</h2>
@@ -202,18 +202,18 @@
                 </a>
             </div>
         </main>
-        <!-- Footer -->
-        <footer>
-            <div>
-                <h3 class="footer-logo">ohmyfood</h3>
-            </div>
-            <div class="link-container">
-                <p><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></p>
-                <p><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></p>
-                <p><a href="#">Mentions légales</a></p>
-                <p><a href="#">Contact</a></p>
-            </div>
-        </footer>
     </div>
+    <!-- Footer -->
+    <footer>
+        <div>
+            <h3 class="footer-logo">ohmyfood</h3>
+        </div>
+        <div class="link-container">
+            <p><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></p>
+            <p><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></p>
+            <p><a href="#">Mentions légales</a></p>
+            <p><a href="#">Contact</a></p>
+        </div>
+    </footer>
 </body>
 </html>
