correction des erreurs sur le validateur W3C

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+
+<!-- Loader -->
+
     <div class="loading-spinner">
         <p>Oh my food!</p>
         <div class="container">
@@ -22,11 +25,17 @@
             <div class="dot"></div>
         </div>
     </div>
+
+<!-- Header -->
+
         <header>
             <div>
                 <h1>ohmyfood</h1>
             </div>
         </header>
+
+<!-- Emplacement, Titre principal, Bouton -->
+
         <main>
             <div class="localisation">
                 <form method="post" action="#" >
@@ -41,6 +50,9 @@
                     <button class="btn">Explorer nos restaurants</button>
                 </form>
             </section>
+
+<!-- Fonctionnement -->
+
             <div class="main-content">
                 <div class="fonctionnement-restaurants-container">
                     <section class="fonctionnement-block">
@@ -57,6 +69,9 @@
                             </div>
                         </div>
                     </section>
+
+<!-- Restaurants -->
+
                     <section class="restaurants-block">
                         <h2>Restaurants</h2>
                         <div class="card-container">
@@ -119,6 +134,9 @@
                 </div>
             </div>
         </main>
+
+<!-- Footer -->
+
         <footer>
             <div>
                 <h3 class="footer-logo">ohmyfood</h3>
@@ -133,4 +151,3 @@
     </body>
     </html>
             
-                        
