--- a/la-palette-du-goût.html
+++ b/la-palette-du-goût.html
@@ -196,9 +196,9 @@
                     </section>
                 </div>
                 <div class="btn-center">
-                    <a href="#">
+                    <form method="post" action="#">
                         <button class="btn">Commander</button>
-                    </a>
+                    </form>
                 </div>
             </div>
         </main>
