--- a/le-délice-des-sens.html
+++ b/le-délice-des-sens.html
@@ -190,9 +190,9 @@
                 </div>
                         <!-- Bouton Commander -->
                 <div class="btn-center">
-                    <a href="#">
+                    <form method="post" action="#">
                         <button class="btn">Commander</button>
-                    </a>
+                    </form>
                 </div>
             </div>
         </main>
