ajout du lien gmail dans contact

--- a/la-note-enchantée.html
+++ b/la-note-enchantée.html
@@ -225,7 +225,7 @@
             <p><i class="fas fa-utensils"></i><a href="#">Proposer un restaurant</a></p>
             <p><i class="fas fa-hands-helping"></i><a href="#">Devenir partenaire</a></p>
             <p><a href="#">Mentions légales</a></p>
-            <p><a href="#">Contact</a></p>
+            <p><a href="mailto:ohmyfood@gmail.com">Contact</a></p>
         </div>
     </footer>
 </body>
